add extended window header menu